--- a/src/app/team/components/member-card/member-card.component.scss
+++ b/src/app/team/components/member-card/member-card.component.scss
@@ -22,13 +22,14 @@
   &__text {
     font-weight: 400;
     text-decoration: none;
+    color: #000;
 
     &--name {
       font-weight: 600;
     }
 
     &--email {
-      flood-color: blue;
+      color: cornflowerblue;
     }
   }
 }
