--- a/src/app/team/components/team-block/team-block.component.scss
+++ b/src/app/team/components/team-block/team-block.component.scss
@@ -4,6 +4,10 @@
   }
 
   &__title {
+    text-align: center;
+    margin: 30px 0;
+    font-size: 2rem;
+    color: cornflowerblue;
   }
 
   &__cards {
